# sri-check

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sri-check  sri-check.py  tox.ini
.github/workflows/: pypi.yaml  tests.yaml
sricheck/: __init__.py  __main__.py  sricheck.py
tests/unit/: test_allowlist.py  test_headers.py  test_init.py  test_parsing.py  test_whitelist.py
