[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sri-check"
dynamic = ["version"]
authors = [{name = "Marc Wickenden", email = "code@4armed.com"}]
description = "Subresource Integrity Checker"
urls = {Homepage = "https://github.com/4armed/sri-check"}
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4>=4.0",
    "blinker==1.7.0", # Required for Seleniumwire
    "lxml>=4.8",
    "requests>=2.0",
    "selenium>=4.25",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
sri-check = "sricheck.sricheck:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "sricheck.__version__"}

